CTA button BG fix

--- a/index.html
+++ b/index.html
@@ -160,7 +160,7 @@
                         <label for="research-filter">Filter by Research Area:</label>
                         <select id="research-filter">
                             <option value="" selected>Select Research Area</option>
-                            <option value="vlsi">VLSI Design & Test</option>
+                            <option value="vlsi">VLSI Design & Testing</option>
                             <option value="microfluidics">Digital Microfluidic Biochips</option>
                             <option value="eda">Electronic Design Automation</option>
                             <option value="geometry">Digital Geometry</option>
@@ -176,7 +176,7 @@
                     <div class="papers-container">
                         <!-- VLSI Design & Test Papers -->
                         <div class="research-category" data-area="vlsi">
-                            <h4>VLSI Design & Test</h4>
+                            <h4>VLSI Design & Testing</h4>
                             <div class="papers-grid">
                                 <div class="paper-card"><h5><a href="https://ieeexplore.ieee.org/document/10483315" target="_blank" rel="noopener">On Managing Test-Time, Power, and Layer Assignment in 3D SoCs</a></h5><p>VLSID 2024</p></div>
                                 <div class="paper-card"><h5><a href="https://ieeexplore.ieee.org/document/8711308" target="_blank" rel="noopener">Selective Sensitization of Useless Sneak-Paths for Test Optimization</a></h5><p>VLSID 2019</p></div>
@@ -612,9 +612,9 @@ Intelligence Association Fellow</a></h4></div>
             <div class="memory-cta">
                 <h2>Share Your Memory</h2>
                 <p style="max-width: 700px; margin: -2rem auto 2.5rem; color: var(--ink-muted);">
-                    <br>Did Professor Bhattacharya's guidance, teaching, or research impact your journey? <br>We invite you to share your story or tribute.
+                    <br>Did Professor Bhattacharya's guidance, teaching, or research impact your journey? <br>We invite you to share your story with him.
                 </p>
-                <a href="mailto:bhargab.bhatta@gmail.com?subject=BBB Legacy: A Memory for Prof. Bhargab B. Bhattacharya" class="cta-button">Share Your Memory</a>
+                <a href="mailto:bhargab.bhatta@gmail.com?subject=BBB Legacy: A Memory for Prof. Bhargab B. Bhattacharya" class="cta-button">Send a message</a>
             </div>
         </div>
     </section>
