--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     
     <!-- Open Graph Meta Tags for Social Media Link Previews -->
     <meta property="og:title" content="Prof. Bhargab B. Bhattacharya - A Tribute to Excellence" />
-    <meta property="og:description" content="A digital archive and tribute celebrating the four-decade career and profound mentorship of Prof. Bhargab B. Bhattacharya." />
+    <meta property="og:description" content="A digital archive and tribute celebrating the five-decade career and profound mentorship of Prof. Bhargab B. Bhattacharya." />
     <meta property="og:type" content="website" />
     <meta property="og:url" content="https://ipfs.io/ipfs/bafybeicfsduu2ebizkxn6vprd6yhkah6pvr3nxjrko2ab5fi3echxa6nfm/" />
     <meta property="og:image" content="https://ipfs.io/ipfs/bafybeicfsduu2ebizkxn6vprd6yhkah6pvr3nxjrko2ab5fi3echxa6nfm/images/prof-photo.jpg" />
@@ -534,7 +534,7 @@
         <div class="container">
             <h2>About this Archive</h2>
             <p>
-                This digital archive serves as a living tribute to Professor Bhargab B. Bhattacharya's four decades of groundbreaking research, dedicated teaching, and profound mentorship. It aims to preserve and celebrate his contributions to computer science and engineering for future generations. <br><br>
+                This digital archive serves as a living tribute to Professor Bhargab B. Bhattacharya's five decades of groundbreaking research, dedicated teaching, and profound mentorship. It aims to preserve and celebrate his contributions to computer science and engineering for future generations. <br><br>
                 Hosted on IPFS (InterPlanetary File System), this archive ensures permanent, decentralized preservation of his academic legacy, making it accessible to researchers, students, and admirers worldwide.
             </p>
         </div>
